HelloUltraviolet/Fixtures/RejectedSource/Statements/DeferNonUnit/Expected.uv
//! Expected diagnostic metadata for the DeferNonUnit rejected-source specimen.

expectedDiagnostic("E-SEM-3151", "rule.18.Defer-NonUnit-Err")
